# Antu

./: .gitignore  LICENSE  README.md  install-antu.sh
Antu Plasma Theme/Antü/: CMakeLists.txt  colors  metadata.desktop
Antu Plasma Theme/Antü/icons/: .directory
Antu Plasma Theme/Antü/widgets/: .directory
Antu Plasma Theme/antu/: metadata.desktop
Antu Plasma Theme/antu-flat/: CMakeLists.txt  colors  metadata.desktop
Antu Plasma Theme/antu-flat/dialogs/: background.svgz
Antu Plasma Theme/antu-flat/widgets/: background.svgz  branding.svgz  panel-background.svgz  toolbar.svgz  tooltip.svgz  translucentbackground.svgz
Antu Plasma Theme/antu/icons/: start.svgz
Antu Plasma Theme/antu/widgets/: busywidget.svgz
Antu/actions/24/: .directory
Antu/actions/32/: .directory
Antu/actions/48/: .directory
Antu/applets/256/: .directory
Antu/apps/22/: .directory
Antu/apps/32/: .directory
Antu/apps/48/: .directory
Antu/categories/32/: .directory
Antu/devices/16/: .directory
Antu/devices/22/: .directory
Antu/devices/48/: .directory
Antu/devices/64/: .directory
Antu/emblems/16/: .directory
Antu/emblems/22/: .directory
Antu/emblems/8/: .directory
Antu/mimetypes/16/: .directory  application-wps-office.wps.svgz
Antu/mimetypes/22/: .directory  application-wps-office.dpt.svgz  application-wps-office.et.svgz  application-wps-office.ett.svgz
Antu/mimetypes/64/: .directory
AntuExtras/: .directory
Icons/AntuExtras/: .directory
Wallpapers/Moai/: metadata.desktop
Wallpapers/Torres/: metadata.desktop
wallpapers/Flowers/: metadata.desktop
(+69 files in other folders)
